--- a/index.css
+++ b/index.css
@@ -30,8 +30,13 @@ html::-webkit-scrollbar-thumb{
     background: var(--green);
 }
 body{
-    background: #eee;
     padding-right: 5rem;
+}
+.background-image{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: .2;
 }
 header{
     position: fixed;
@@ -76,6 +81,19 @@ section{
     justify-content: center;
     position: relative;
 }
+.home #particles-js{
+    position: absolute;
+    top: 0; left: 0;
+    height: 100%;
+    width: 100%;
+}
+.home::before{
+    content: '';
+    position: absolute;
+    top: 0;left: 0;
+    height: 100%;
+    width: 100%;
+}
 .home .content{
     text-align: center;
     position: relative;
@@ -118,7 +136,17 @@ section{
 header .active{
     left:0%;
 }
-
+.heading{
+    text-align: center;
+    padding: 2rem;
+    font-size: 4rem;
+    text-transform: uppercase;
+    color: #222;
+}
+.heading span{
+    text-transform: uppercase;
+    color: var(--green);
+}
 
 
 @media(max-width:991px){
