--- a/index.css
+++ b/index.css
@@ -30,6 +30,7 @@ html::-webkit-scrollbar-thumb{
     background: var(--green);
 }
 body{
+    background: #eee;
     padding-right: 5rem;
 }
 .background-image{
@@ -147,6 +148,47 @@ header .active{
     text-transform: uppercase;
     color: var(--green);
 }
+
+.about .row{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    align-items: center;
+    justify-content: center;
+    
+}
+.about .row .image{
+    text-align: center;
+    flex:0 0 auto;
+}
+.about .row .image img{
+    width: 30rem;
+    border-radius: .5rem;
+    border: 1rem solid #fff;
+    box-shadow: 0.5rem 1rem rgba(0,0,0,.1);
+}
+.about .row .content{
+    flex:1 1 55rem
+}
+.about .row .content h3{
+    color: #222;
+    font-size: 3rem;
+}
+.about .row .content h3 span{
+    color: var(--green);
+}
+.about .row .content p{
+    color: #333;
+    font-size: 4rem;
+}
+
+
+
+
+
+
+
+
 
 
 @media(max-width:991px){
