--- a/index.css
+++ b/index.css
@@ -177,10 +177,36 @@ header .active{
 .about .row .content h3 span{
     color: var(--green);
 }
-.about .row .content p{
+.about .row .content .info{
     color: #333;
-    font-size: 4rem;
+    font-size: 2rem;
+    line-height: 2.5rem;
 }
+.about .row .content .container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    padding: 1rem 0;
+}
+.about .row .content .container .box{
+    flex: 1 1 20rem;
+}
+.about .row .content .container .box p{
+    font-size: 1.7rem;
+    color: #222;
+    padding: 5rem 0;
+    line-height: 2rem;
+}
+.about .row .content .container .box p span{
+    color: var(--green);
+}
+
+
+
+
+
+
+
 
 
 
