--- a/index.css
+++ b/index.css
@@ -148,27 +148,33 @@ header .active{
     text-transform: uppercase;
     color: var(--green);
 }
-
+.about {
+    margin-top: 10rem;
+}
 .about .row{
     display: flex;
     flex-wrap: wrap;
     gap: 1.5rem;
     align-items: center;
     justify-content: center;
+    margin-left: 15rem;
     
 }
 .about .row .image{
     text-align: center;
     flex:0 0 auto;
+    border-radius: 4rem;
 }
 .about .row .image img{
-    width: 30rem;
+    width: 25rem;
     border-radius: .5rem;
     border: 1rem solid #fff;
     box-shadow: 0.5rem 1rem rgba(0,0,0,.1);
 }
 .about .row .content{
-    flex:1 1 55rem
+    flex:1 1 55rem;
+    margin-left: 3.5rem;
+    margin-right: 20rem;
 }
 .about .row .content h3{
     color: #222;
@@ -182,19 +188,22 @@ header .active{
     font-size: 2rem;
     line-height: 2.5rem;
 }
-.about .row .content .container{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1.5rem;
-    padding: 1rem 0;
-}
 .about .row .content .container .box{
-    flex: 1 1 20rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.box-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-right: 2rem;
 }
 .about .row .content .container .box p{
     font-size: 1.7rem;
     color: #222;
-    padding: 5rem 0;
+    padding: 1rem 0;
     line-height: 2rem;
 }
 .about .row .content .container .box p span{
@@ -210,15 +219,32 @@ header .active{
     margin-right: 1rem;
 }
 
+.reveal-btn {
+    cursor: pointer;
+    padding: .45rem .65rem;
+    font-weight: 900;
+}
+
+.container {
+    margin-top: 2rem;
+    margin-bottom: 3rem;
+}
+
+.download-btn {
+    padding: 1rem 2rem;
+    background-color: #222;
+    color:#fff;
+    font-weight: 800;
+    display: inline-block;
+    font-size: 1.5rem;
+}
 
 
-
-
-
-
-
-
-
+.download-btn:hover {
+    background-color: var(--green);
+    color: #fff;
+    letter-spacing: 0.2rem;
+}
 
 
 @media(max-width:991px){
