--- a/css/style.css
+++ b/css/style.css
@@ -249,13 +249,13 @@ header .navbar a:hover{
     color:var(--green);
 }
 
-.Resume .box-container{
+.skills .box-container{
     display: flex;
     flex-wrap: wrap;
     gap:1.5rem;
 }
 
-.Resume .box-container .box{
+.skills .box-container .box{
     flex:1 1 30rem;
     border-radius: .5rem;
     background:#fff;
@@ -264,32 +264,32 @@ header .navbar a:hover{
     text-align: center;
 }
 
-.Resume .box-container .box i{
+.skills .box-container .box i{
     color:var(--green);
     font-size: 5rem;
     padding:1rem 0;
 }
 
-.Resume .box-container .box h3{
+.skills .box-container .box h3{
     color:#222;
     font-size: 2.5rem;
     padding-top:1rem;
 }
 
-.Resume .box-container .box p{
+.skills .box-container .box p{
     color:#333;
     font-size:1.7rem;
     padding:1rem 0;
     line-height: 2;
 }
 
-.portfolio .box-container{
+.works .box-container{
     display: flex;
     flex-wrap: wrap;
     gap:1.5rem;
 }
 
-.portfolio .box-container .box{
+.works .box-container .box{
     flex:1 1 30rem;
     border-radius: .5rem;
     border:1rem solid #fff;
@@ -299,13 +299,13 @@ header .navbar a:hover{
     height:25rem;
 }
 
-.portfolio .box-container .box img{
+.works .box-container .box img{
     height: 100%;
     width:100%;
     object-fit: cover;
 }
 
-.portfolio .box-container .box .content{
+.works .box-container .box .content{
     height: 100%;
     width:100%;
     position: absolute;
@@ -316,7 +316,7 @@ header .navbar a:hover{
     justify-content: center;
 }
 
-.portfolio .box-container .box:hover .content{
+.works .box-container .box:hover .content{
     left:0;
 }
 
